# type-categories

./: pyproject.toml
type_categories/: __init__.py  categories.py  ndlist.py
